kubernetes/media/jellyseerr/05-deployment-jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
        - name: jellyseerr
          image: ghcr.io/seerr-team/seerr:v3.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
