kubernetes/media/jellyseerr/06-svc-jellyseerr.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: jellyseerr
  ports:
    - port: 80
      targetPort: 5055
      protocol: TCP
